add edit, update, show and index actions and templates

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -6,3 +6,7 @@
 <p>
   Description: <%= @article.description %>
 </p>
+
+<%= link_to "Edit article", edit_article_path(@article) %> |
+<%= link_to "All articles", articles_path %>
+
