--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,8 @@
 <h1>All articles</h1>
 <p>
+  <%= link_to "Home", root_path %>
+</p>
+<p>
   <%= link_to "Create new article", new_article_path %>
 </p>
 <table>
@@ -14,6 +17,7 @@
       <td><%= article.description %></td>
       <td><%= link_to "View", article_path(article) %></td>
       <td><%= link_to "Edit", edit_article_path(article) %></td>
+      <td><%= link_to "Delete", article_path(article), method: :delete, data: {confirm: "Are you sure?"} %></td>
     </tr>
   <% end %>
 </table>
