--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -19,7 +19,7 @@ $navbar-default-bg: black;
   font-weight: bold;
 }
 
-.btn-xlarge {
+.btn-lg {
   font-size: 1.4em;
   background-color: black;
 }
@@ -30,7 +30,7 @@ footer {
 
   small {
     float: left;
-    
+
     p {
       color: #8f9296;
       font-size: 1rem;
