--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -24,6 +24,12 @@ $navbar-default-bg: black;
   background-color: black;
 }
 
+.alert {
+  font-size: 1.5rem;
+  padding: 1rem 3.5rem 1rem 1.5rem;
+  margin-bottom: 1rem;
+}
+
 footer {
   margin-top: 20px;
   padding: 5px auto;
