--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,38 +1,31 @@
-<% if @article.errors.any? %>
-  <h2>The following errors prevented the articl from getting created</h2>
-  <ul>
-    <% @article.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
-  </ul>
-<% end %>
+<%= render 'shared/errors', obj: @article %>
 
 <div class='row'>
   <div class='col-xs-12'>
     <%= form_for(@article, :html => {class: "form-horizontal", role: "form"}) do |f| %>
       <div class="form-group">
-        <div class="control-label col-sm-2">
+        <div class="control-label col-sm-3">
           <%= f.label :title %><br/>
         </div>
-        <div class="control-label col-sm-8">
+        <div class="control-label col-sm-6">
           <%= f.text_field :title, class: "form-control", placeholder: "Title of article", autofocus: true %>
         </div>
       </div>
       <div class="form-group">
-        <div class="control-label col-sm-2">
+        <div class="control-label col-sm-3">
           <%= f.label :description %>
         </div>
-        <div class="control-label col-sm-8">
+        <div class="control-label col-sm-6">
           <%= f.text_area :description, rows: 10, class: "form-control", placeholder: "Body of article" %>
         </div>
       </div>
       <div class="form-group">
-        <div class="col-sm-offset-2 col-sm-10">
+        <div class="col-sm-offset-3 col-sm-10">
           <%= f.submit class: "btn btn-primary btn-lg" %>
         </div>
       </div>
     <% end %>
-    <div class="col-xs-4 col-xs-offset-4">
+    <div class="col-xs-4 col-xs-offset-5">
       [ <%= link_to "Cancel request and return to Articles listing", articles_path %> ]
     </div>
   </div>
