--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -24,10 +24,13 @@ $navbar-default-bg: black;
   background-color: black;
 }
 
-.alert {
-  font-size: 1.5rem;
-  padding: 1rem 3.5rem 1rem 1.5rem;
-  margin-bottom: 1rem;
+.article-actions {
+  border-top: 1px solid #eaeaea;
+  padding-top: 10px;
+}
+
+.description {
+  margin-top: 0;
 }
 
 footer {
