--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,12 +1,14 @@
-<h1>Showing selected article</h1>
+<h2 align="center">Title: <%= @article.title %></h2>
 
-<p>
-  Title: <%= @article.title %>
-</p>
-<p>
-  Description: <%= @article.description %>
-</p>
-
-<%= link_to "Edit article", edit_article_path(@article) %> |
-<%= link_to "All articles", articles_path %>
-
+<div class="well col-xs-8 col-xs-offset-2">
+  <h4 class="center description"><strong>Description</strong></h4>
+  <hr>
+  <%= simple_format(@article.description) %>
+  <div class="article-actions">
+    <%= link_to "Back", articles_path, class: "btn btn-xs btn-success" %>
+    <%= link_to "Edit", edit_article_path(@article), class: "btn btn-xs btn-primary" %>
+    <%= link_to "Delete", article_path(@article), method: :delete,
+                                data: {confirm: "Are you sure you want to delete?"},
+                                class: "btn btn-xs btn-danger" %>
+  </div>
+</div>
