--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
 <div class="jumbotron">
   <h1>youBlog</h1>
-  <%= link_to "Sign Up now", "#", class: "btn btn-primary btn-lg btn-xlarge" %>
+  <%= link_to "Sign Up now", signup_path, class: "btn btn-primary btn-lg btn-xlarge" %>
 </div>
