add users listing and update show article view

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -48,6 +48,11 @@ $navbar-default-bg: black;
   padding: 15px 0;
 }
 
+.listing {
+  list-style: none;
+  padding-left: 10px
+}
+
 footer {
   margin-top: 20px;
   padding: 5px auto;
