- implement user login and sessions - create authentication helpers - refactor users controller - implement user authentication for features

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -53,6 +53,10 @@ $navbar-default-bg: black;
   padding-left: 10px
 }
 
+.dropdown-menu .divider {
+  height: 2px;
+}
+
 footer {
   margin-top: 20px;
   padding: 5px auto;
