--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,7 @@
 <h1 align="center">Listing all articles</h1>
-
+<% if logged_in? %>
+  <%= link_to "New Article", new_article_path(@article), class: "btn btn-xs btn-primary" %>
+<% end %>
 <%= render  "article", obj: @articles %>
 <div align="center">
   <%= will_paginate %>
