--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -23,10 +23,12 @@
   <hr>
   <%= simple_format(@article.description) %>
   <div class="article-actions">
+    <% if logged_in? && current_user == @article.user %>
+      <%= link_to "Edit", edit_article_path(@article), class: "btn btn-xs btn-primary" %>
+      <%= link_to "Delete", article_path(@article), method: :delete,
+                                  data: {confirm: "Are you sure you want to delete?"},
+                                  class: "btn btn-xs btn-danger" %>
+    <% end %>
     <%= link_to "Back", articles_path, class: "btn btn-xs btn-success" %>
-    <%= link_to "Edit", edit_article_path(@article), class: "btn btn-xs btn-primary" %>
-    <%= link_to "Delete", article_path(@article), method: :delete,
-                                data: {confirm: "Are you sure you want to delete?"},
-                                class: "btn btn-xs btn-danger" %>
   </div>
 </div>
