--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -5,7 +5,7 @@
     <%= form_for(@user, :html => {class: "form-horizontal", role: "form"}) do |f| %>
       <div class="form-group">
         <div class="control-label col-sm-3">
-          <%= f.label :username %><br/>
+          <i class="fas fa-user"></i>
         </div>
         <div class="col-sm-6">
           <%= f.text_field :username, class: "form-control", placeholder: "Username", autofocus: true %>
@@ -13,7 +13,7 @@
       </div>
       <div class="form-group">
         <div class="control-label col-sm-3">
-          <%= f.label :email %>
+          <i class="fas fa-envelope"></i>
         </div>
         <div class="col-sm-6">
           <%= f.email_field :email, class: "form-control", placeholder: "Email Addres" %>
@@ -21,7 +21,7 @@
       </div>
       <div class="form-group">
         <div class="control-label col-sm-3">
-          <%= f.label :password %>
+          <i class="fas fa-lock"></i>
         </div>
         <div class="col-sm-6">
           <%= f.password_field :password, class: "form-control", placeholder: "Password" %>
