--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <footer class="footer">
     <small class="footer-link">
-      <%= link_to "Home", root_path %> | <%= link_to "Blog", articles_path %>
+      <%= link_to "Home", root_path %> | <%= link_to 'About', about_path %>
       <p>youBlog &copy; 2019</p>
     </small>
     <div class="social-link">
