--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -14,12 +14,12 @@
             </small>
           </div>
         </div>
-        <% if logged_in? && current_user == article.user %>
+        <% if logged_in? && (current_user == article.user || current_user.admin?) %>
           <div class="article-actions">
             <%= link_to "Edit", edit_article_path(article), class: "btn btn-xs btn-primary" %>
             <%= link_to "Delete", article_path(article), method: :delete,
-                                        data: {confirm: "Are you sure you want to delete?"},
-                                        class: "btn btn-xs btn-danger" %>
+              data: {confirm: "Are you sure you want to delete?"},
+              class: "btn btn-xs btn-danger" %>
           </div>
         <% end %>
       </div>
