--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -14,9 +14,8 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><%= link_to 'Articles', articles_path%></li>
+        <li><%= link_to 'Articles', articles_path%></li>
         <li><%= link_to 'Bloggers', users_path %></li>
-        <li><%= link_to 'About', about_path %></li>
         <% if logged_in? %>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fas fa-user"></i><span class="caret"></span></a>
@@ -38,12 +37,18 @@
         <% if logged_in? %>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-              My Profile <i class="fas fa-user"></i><span class="caret"></span>
+              My Profile
+              <% if current_user.admin? %>
+                <i class="fas fa-user-shield"></i>
+              <% else %>
+                <i class="fas fa-user"></i>
+              <% end %>
+              <span class="caret"></span>
             </a>
             <ul class="dropdown-menu">
-              <li><%= link_to "Edit Profile", edit_user_path(current_user) %></li>
               <li><%= link_to "View Profile", user_path(current_user) %></li>
-              <li><a href="#">Something else here</a></li>
+              <li><%= link_to "Edit Profile", edit_user_path(current_user) %></li>
+              <li><%= link_to "Create Article", new_article_path %></li>
               <li role="separator" class="divider"></li>
               <li><%= link_to "LogOut", logout_path, method: :delete %></li>
             </ul>
