--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -15,23 +15,13 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><%= link_to 'Articles', articles_path%></li>
-        <li><%= link_to 'Bloggers', users_path %></li>
-        <% if logged_in? %>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fas fa-user"></i><span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><%= link_to "New article", new_article_path %></li>
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-            </ul>
-          </li>
-        <% end %>
+        <li><%= link_to 'Authors', users_path %></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Categories</i><span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><%= link_to "All Categories", categories_path %></li>
             <% Category.all.each do |category| %>
-              <li><%= link_to  "#{category.name}", category_path(category) %></li>
+              <li><%= link_to  "#{category.name.capitalize}", category_path(category) %></li>
             <% end %>
             <% if logged_in? and current_user.admin? %>
               <li role="separator" class="divider"></li>
@@ -50,7 +40,6 @@
         <% if logged_in? %>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-              My Profile
               <% if current_user.admin? %>
                 <i class="fas fa-user-shield"></i>
               <% else %>
@@ -59,9 +48,9 @@
               <span class="caret"></span>
             </a>
             <ul class="dropdown-menu">
+              <li><%= link_to "New Article", new_article_path %></li>
               <li><%= link_to "View Profile", user_path(current_user) %></li>
               <li><%= link_to "Edit Profile", edit_user_path(current_user) %></li>
-              <li><%= link_to "Create Article", new_article_path %></li>
               <li role="separator" class="divider"></li>
               <li><%= link_to "LogOut", logout_path, method: :delete %></li>
             </ul>
