--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -22,6 +22,9 @@
   <h4 class="center description"><strong>Description</strong></h4>
   <hr>
   <%= simple_format(@article.description) %>
+  <% if @article.categories.any? %>
+    <%= render  @article.categories %>
+  <% end %>
   <div class="article-actions">
     <% if logged_in? && (current_user == @article.user || current_user.admin?) %>
       <%= link_to "Edit", edit_article_path(@article), class: "btn btn-xs btn-primary" %>
