--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,4 +1,11 @@
-<h1 align="center"><%= @category.name %></h1>
+<h1 align="center" class="category-heading"><%= @category.name %></h1>
+<div align="center">
+  <% if logged_in? and current_user.admin? %>
+    <div class="row">
+      <span class="item-category"><%= link_to  "Edit Category", edit_category_path(@category) %></span>
+    </div>
+  <% end %>
+</div>
 <%= render  "articles/article", obj: @category_articles %>
 <div align="center">
   <%= will_paginate @category_articles %>
