--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,22 +1,55 @@
-$navbar-default-bg: black;
+// $navbar-default-bg: black;
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "font-awesome-sprockets";
+@import "font-awesome";
+@import url('https://fonts.googleapis.com/css?family=Berkshire+Swash|Josefin+Sans:400,600|Sofia&display=swap');
 
-.jumbotron {
-  background-image: asset-url("signup.jpg");
-  background-size: cover;
-  margin: 0 auto;
-  height: 800px;
-  text-align: center;
+body {
+  min-height: 100vh;
+  font-family: "Josefin Sans", sans-serif;
 }
 
-.jumbotron h1 {
-  color: #ffffff;
-  margin-bottom: 30px;
-  letter-spacing: -1px;
-  font-family: Arial, "Helvetica", sans-serif;
-  font-weight: bold;
+.navbar-default {
+  background-color: transparent;
+  border-color: transparent;
+  margin: 0;
+
+  .container {
+    width: 100%;
+    margin: 0 auto;
+    position: fixed;
+    top: 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    .navbar-brand {
+      color: #ffffff;
+      font-family: "Berkshire Swash", cursive;
+      font-size: 24px;
+    }
+
+    span {
+      background-color: #fff;
+      padding: 0.5rem 2rem;
+      border-radius: 3px;
+      font-size: 1rem;
+      margin-left: 50%;
+
+      a {
+        color: #000000;
+        font-size: 15px;
+        font-weight: bold;
+
+        &:hover {
+          color: #ff7a00;
+          text-decoration: none;
+        }
+      }
+    }
+  }
 }
 
 .btn-lg {
@@ -119,4 +152,10 @@ footer {
 
 .category-heading {
   text-transform: capitalize;
+}
+
+@media screen and (max-width: 48rem) {
+  .navbar-toggle {
+    display: none;
+  }
 }
