--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -12,54 +12,55 @@
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li><%= link_to 'Articles', articles_path%></li>
-        <li><%= link_to 'Authors', users_path %></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Categories</i><span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><%= link_to "All Categories", categories_path %></li>
-            <% Category.all.each do |category| %>
-              <li><%= link_to  "#{category.name.capitalize}", category_path(category) %></li>
-            <% end %>
-            <% if logged_in? and current_user.admin? %>
-              <li role="separator" class="divider"></li>
-              <li><%= link_to "New Category", new_category_path %></li>
-            <% end %>
-          </ul>
-        </li>
-      </ul>
-      <form class="navbar-form navbar-left">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default"><i class="fas fa-search"></i></button>
-      </form>
-      <ul class="nav navbar-nav navbar-right">
-        <% if logged_in? %>
+    <% if signup_path %>
+      <span><%= link_to "Log in", login_path %></span>
+    <% else %>
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li><%= link_to 'Articles', articles_path%></li>
+          <li><%= link_to 'Authors', users_path %></li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-              <% if current_user.admin? %>
-                <i class="fas fa-user-shield"></i>
-              <% else %>
-                <i class="fas fa-user"></i>
-              <% end %>
-              <span class="caret"></span>
-            </a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Categories</i><span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><%= link_to "New Article", new_article_path %></li>
-              <li><%= link_to "View Profile", user_path(current_user) %></li>
-              <li><%= link_to "Edit Profile", edit_user_path(current_user) %></li>
-              <li role="separator" class="divider"></li>
-              <li><%= link_to "LogOut", logout_path, method: :delete %></li>
+              <li><%= link_to "All Categories", categories_path %></li>
+              <% Category.all.each do |category| %>
+                <li><%= link_to  "#{category.name.capitalize}", category_path(category) %></li>
+              <% end %>
+              <% if logged_in? and current_user.admin? %>
+                <li role="separator" class="divider"></li>
+                <li><%= link_to "New Category", new_category_path %></li>
+              <% end %>
             </ul>
           </li>
-        <% else %>
-          <li><%= link_to "Login", login_path %></li>
-          <li><%= link_to "SignUp", signup_path %></li>
-        <% end %>
-      </ul>
-    </div><!-- /.navbar-collapse -->
+        </ul>
+        <form class="navbar-form navbar-left">
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="Search">
+          </div>
+          <button type="submit" class="btn btn-default"><i class="fas fa-search"></i></button>
+        </form>
+        <ul class="nav navbar-nav navbar-right">
+          <% if logged_in? %>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                <% if current_user.admin? %>
+                  <i class="fas fa-user-shield"></i>
+                <% else %>
+                  <i class="fas fa-user"></i>
+                <% end %>
+                <span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu">
+                <li><%= link_to "New Article", new_article_path %></li>
+                <li><%= link_to "View Profile", user_path(current_user) %></li>
+                <li><%= link_to "Edit Profile", edit_user_path(current_user) %></li>
+                <li role="separator" class="divider"></li>
+                <li><%= link_to "LogOut", logout_path, method: :delete %></li>
+              </ul>
+            </li>
+          <% end %>
+        </ul>
+      </div><!-- /.navbar-collapse -->
+    <% end %>
   </div><!-- /.container-fluid -->
 </nav>
