--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,12 +11,14 @@
   </head>
 
   <body>
-    <header>
-      <%= render 'layouts/navigation' %>
-    </header>
-    <div class="container-fluid ">
-      <%= render 'layouts/messages' %>
-      <%= yield %>
+    <div class="banner">
+      <header>
+        <%= render 'layouts/navigation' %>
+      </header>
+      <div class="container-fluid ">
+        <%= render 'layouts/messages' %>
+        <%= yield %>
+      </div>
     </div>
     <%= render 'layouts/footer' %>
     <%= debug(params) if Rails.env.development? %>
