--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -4,31 +4,25 @@
   <div class='col-xs-12'>
     <%= form_for(@user, :html => {class: "form-horizontal", role: "form"}) do |f| %>
       <div class="form-group">
-        <div class="control-label col-sm-3">
-          <i class="fas fa-user"></i>
-        </div>
         <div class="col-sm-6">
+          <span class="fas fa-user"></span>
           <%= f.text_field :username, class: "form-control", placeholder: "Username", autofocus: true %>
         </div>
       </div>
       <div class="form-group">
-        <div class="control-label col-sm-3">
-          <i class="fas fa-envelope"></i>
-        </div>
         <div class="col-sm-6">
-          <%= f.email_field :email, class: "form-control", placeholder: "Email Addres" %>
+          <span class="fas fa-envelope"></span>
+          <%= f.email_field :email, class: "form-control", placeholder: "Email Address" %>
         </div>
       </div>
       <div class="form-group">
-        <div class="control-label col-sm-3">
-          <i class="fas fa-lock"></i>
-        </div>
         <div class="col-sm-6">
+          <span class="fas fa-lock"></span>
           <%= f.password_field :password, class: "form-control", placeholder: "Password" %>
         </div>
       </div>
       <div class="form-group">
-        <div class="col-sm-offset-3 col-sm-10">
+        <div class="col-sm-6">
           <%= f.submit(@user.new_record? ? "Sign up" : "Update", class: "btn btn-primary btn-lg") %>
         </div>
       </div>
