--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,15 +1,17 @@
-<div class="main-wrapper">
-  <div class="row">
-    <h2 align="center"> Sign up for free to start sharing <br> your inspiration and story on authors haven</h2>
-    <div class="signup-form">
-      <%= render  "form" %>
-      <p>Already registered? <%= link_to  "Log in", login_path %></p>
-      <br>
-      <p class="social-links">Sign up with 
-        <a href="#" id="twitter" target="_blank"><%= image_tag "twitter.png" %></a>
-        <a href="#" id="google" target="_blank"><%= image_tag  "google.png" %></a> 
-        <a href="#" id="facebook" target="_blank"><%= image_tag  "facebook.png" %></a>
-      </p>
+<div id="main-signup">
+  <div class="container-fluid">
+    <div class="row">
+      <h2 align="center"> Sign up for free to start sharing <br> your inspiration and story on authors haven</h2>
+      <div class="signup-form">
+        <%= render  "form" %>
+        <p>Already registered? <%= link_to  "Log in", login_path %></p>
+        <br>
+        <p class="social-links">Sign up with 
+          <a href="#" id="twitter" target="_blank"><%= image_tag "twitter.png" %></a>
+          <a href="#" id="google" target="_blank"><%= image_tag  "google.png" %></a> 
+          <a href="#" id="facebook" target="_blank"><%= image_tag  "facebook.png" %></a>
+        </p>
+      </div>
     </div>
   </div>
 </div>
