--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2,16 +2,17 @@
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
-@import "font-awesome-sprockets";
-@import "font-awesome";
-@import url('https://fonts.googleapis.com/css?family=Berkshire+Swash|Josefin+Sans:400,600|Sofia&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Berkshire+Swash|Josefin+Sans:400,600|Sofia&display=swap");
 
 body {
+  display: flex;
+  flex-direction: column;
   min-height: 100vh;
   font-family: "Josefin Sans", sans-serif;
 }
 
 .navbar-default {
+  position: absolute;
   background-color: transparent;
   border-color: transparent;
   margin: 0;
