- restyle the login page - fix bugs occuring in the navbar - fix bugs occuring on signup page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -39,15 +39,19 @@ body {
       font-size: 1rem;
       margin-left: 50%;
 
+      &:hover {
+        background: #ff7a00;
+
+        a {
+          color: #ffffff;
+          text-decoration: none;
+        }
+      }
+
       a {
         color: #000000;
         font-size: 15px;
         font-weight: bold;
-
-        &:hover {
-          color: #ff7a00;
-          text-decoration: none;
-        }
       }
     }
   }
