--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -17,7 +17,7 @@ body {
   border-color: transparent;
   margin: 0;
 
-  .container {
+  #auth-container {
     width: 100%;
     margin: 0 auto;
     position: fixed;
@@ -52,6 +52,59 @@ body {
         color: #000000;
         font-size: 15px;
         font-weight: bold;
+      }
+    }
+  }
+
+  #pages-container {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: #ffffff;
+    box-shadow: 0px 0px 9px rgba(0, 0, 0, 0.25);
+    .navbar-brand {
+      color: #001935;
+      font-family: "Berkshire Swash", cursive;
+      font-size: 24px;
+    }
+
+    .collapse {
+      margin-left: 50%;
+
+      .navbar-form {
+        padding-left: 0;
+        padding-right: 0;
+        margin: 10px auto 8px;
+
+        .form-group {
+          input[type="text"] {
+            border-color: #001935;
+          }
+        }
+
+        button[type="submit"] {
+          border: none;
+
+          .fa-search {
+            color: #001935;
+            font-size: 16px;
+          }
+        }
+      }
+
+      .navbar-nav {
+        li {
+          a {
+            i {
+              color: #001935;
+              font-size: 18px;
+            }
+          }
+        }
       }
     }
   }
