--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-default">
-  <div class="container">
+  <div class="container" id="<%= if current_page?(signup_path) || current_page?(login_path) then 'auth-container' else 'pages-container' end %>">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -19,21 +19,21 @@
     <% else %>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li><%= link_to 'Articles', articles_path%></li>
-          <li><%= link_to 'Authors', users_path %></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Categories</i><span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><%= link_to "All Categories", categories_path %></li>
-              <% Category.all.each do |category| %>
-                <li><%= link_to  "#{category.name.capitalize}", category_path(category) %></li>
-              <% end %>
-              <% if logged_in? and current_user.admin? %>
-                <li role="separator" class="divider"></li>
-                <li><%= link_to "New Category", new_category_path %></li>
-              <% end %>
-            </ul>
-          </li>
+          <% if current_page?(root_path) || current_page?(articles_path) %>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Categories</i><span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><%= link_to "All Categories", categories_path %></li>
+                <% Category.all.each do |category| %>
+                  <li><%= link_to  "#{category.name.capitalize}", category_path(category) %></li>
+                <% end %>
+                <% if logged_in? and current_user.admin? %>
+                  <li role="separator" class="divider"></li>
+                  <li><%= link_to "New Category", new_category_path %></li>
+                <% end %>
+              </ul>
+            </li>
+          <% end %>
         </ul>
         <form class="navbar-form navbar-left">
           <div class="form-group">
@@ -43,6 +43,7 @@
         </form>
         <ul class="nav navbar-nav navbar-right">
           <% if logged_in? %>
+            <li><a href="#"><i class="far fa-bell"></i></a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                 <% if current_user.admin? %>
@@ -53,13 +54,19 @@
                 <span class="caret"></span>
               </a>
               <ul class="dropdown-menu">
-                <li><%= link_to "New Article", new_article_path %></li>
-                <li><%= link_to "View Profile", user_path(current_user) %></li>
-                <li><%= link_to "Edit Profile", edit_user_path(current_user) %></li>
+                <li><%= link_to 'Home', articles_path %></li>
+                <li><%= link_to 'Authors', users_path %></li>
+                <li><%= link_to "Write a post", new_article_path %></li>
+                <li><%= link_to "My Profile", user_path(current_user) %></li>
+                <li><a href="#">Bookmarks</a></li>
+                <li><%= link_to "Edit Profile", edit_user_path(current_user) %></li> 
                 <li role="separator" class="divider"></li>
                 <li><%= link_to "LogOut", logout_path, method: :delete %></li>
               </ul>
             </li>
+          <% else %>
+            <span><%= link_to "Log in", login_path %></span>
+            <span><%= link_to "Sign Up", signup_path %></span>
           <% end %>
         </ul>
       </div><!-- /.navbar-collapse -->
