--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -66,6 +66,8 @@ body {
     align-items: center;
     background: #ffffff;
     box-shadow: 0px 0px 9px rgba(0, 0, 0, 0.25);
+    z-index: 1000;
+
     .navbar-brand {
       color: #001935;
       font-family: "Berkshire Swash", cursive;
@@ -102,6 +104,24 @@ body {
             i {
               color: #001935;
               font-size: 18px;
+            }
+          }
+
+          .dropdown-menu {
+            box-shadow: 0 2px 3px 0 rgba(34, 36, 38, 0.15);
+            border: 1px solid rgba(34, 36, 38, 0.15);
+            border-radius: 4px;
+            min-width: max-content;
+            padding: 5px 0 0;
+
+            li {
+              a {
+                padding: 8px 16px;
+              }
+            }
+
+            .divider {
+              margin: 0;
             }
           }
         }
@@ -160,38 +180,68 @@ body {
 }
 
 footer {
-  margin-top: 20px;
-  padding: 5px auto;
+  // margin-top: 20px;
+  // padding: 5px auto;
+  background-color: #001935;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  margin: 0;
+  padding: 0;
+  /* height: 45px; */
 
-  small {
-    float: left;
+  .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0;
+    width: 100%;
 
-    p {
-      color: #8f9296;
-      font-size: 1rem;
-      margin: 1rem 0;
-      padding: 0 1rem;
+    .footer-link {
+      color: #ffffff;
+      display: grid;
+      grid-template-columns: 45% auto 45%;
+      grid-gap: 8px;
+      margin-top: 8px;
+      align-items: center;
+      justify-items: center;
+
+      a {
+        color: #ffffff;
+        font-size: 18px;
+        font-weight: bold;
+        // padding: 0 1rem;
+      }
+
+      p {
+        color: #ffffff;
+        font-size: 1rem;
+        // margin: 1rem 0;
+        padding: 0 1rem;
+        grid-column: span 3;
+      }
     }
 
-    a {
-      font-size: 18px;
-      font-weight: bold;
-      margin: 0 0 10px;
-      padding: 0 1rem;
-    }
-  }
+    .social-link {
+      margin-left: 40%;
+      display: flex;
 
-  .social-link {
-    float: right;
+      a {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        width: 35px;
+        height: 35px;
+        font-size: 20px;
+        color: #ffffff;
+        margin: 0 8px;
 
-    a {
-      display: inline-block;
-      width: 35px;
-      height: 35px;
-      font-size: 20px;
-      text-align: center;
-      line-height: 15px;
-      margin: 0 0.5rem;
+        &:hover {
+          text-decoration: none;
+          transform: scale(1.3);
+          transition: all 0.2s ease-in-out;
+        }
+      }
     }
   }
 }
