--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -1,31 +1,32 @@
 <% obj.each do |article| %>
-  <div class="row">
-    <div class="col-xs-8 col-xs-offset-2">
-      <div class="well well-lg">
-        <div class="article-title">
-          <%= link_to article.title, article_path(article) %>
+    <div class="article_wrapper">
+      <div class="article">
+        <h4 class="article-title"><%= article.title %></h4>
+        <div class="seperator"></div>
+        <div class="article-meta-details">
+          <small class="article-username">By: <%= article.user.username if article.user %></small>
+          <small><%= time_ago_in_words(article.created_at) %> ago</small>
         </div>
         <div class="article-body">
-          <%= truncate(article.description, length: 80) %>
-          <div class="article-meta-details">
-            <small>Created by: <%= article.user.username if article.user %>,
-              <%= time_ago_in_words(article.created_at) %> ago,
-              last updated: <%= time_ago_in_words(article.updated_at) %> ago
-            </small>
-          </div>
+          <p><%= truncate(article.description, length: 80) %></p>
         </div>
-        <% if article.categories.any? %>
-          <%= render article.categories %>
-        <% end %>
-        <% if logged_in? && (current_user == article.user || current_user.admin?) %>
-          <div class="article-actions">
-            <%= link_to "Edit", edit_article_path(article), class: "btn btn-xs btn-primary" %>
-            <%= link_to "Delete", article_path(article), method: :delete,
-              data: {confirm: "Are you sure you want to delete?"},
-              class: "btn btn-xs btn-danger" %>
-          </div>
-        <% end %>
+        <div class="article-category">
+          <% if article.categories.any? %>
+            <%= render article.categories %>
+          <% end %>
+        </div>
+        <div class="article-actions">
+          <span><%= link_to "READ MORE", article_path(article) %></span>
+          <span>
+            <% if logged_in? && (current_user == article.user || current_user.admin?) %>
+              <%= link_to "Edit", edit_article_path(article) %>
+              |
+              <%= link_to "Delete", article_path(article), method: :delete,
+                data: {confirm: "Are you sure you want to delete?"} %>
+            <% end %>
+          </span>
+        </div>
+        
       </div>
     </div>
-  </div>
 <% end %>
