--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -77,6 +77,7 @@
     margin: 40px 160px auto;
     display: flex;
     flex: 1;
+    justify-content: center;
 
     .main-posts {
       display: grid;
@@ -85,8 +86,6 @@
       justify-content: center;
 
       .article_wrapper {
-        // width: 40%;
-
         .article {
           background: #ffffff;
           box-shadow: 0px 10px 50px 0px rgba(84, 110, 122, 0.15);
@@ -138,7 +137,7 @@
 
             span {
               background: whitesmoke;
-              padding: 5px 8px;
+              padding: 6px 8px;
               margin: 0 0.5rem 0 0;
 
               a {
@@ -146,6 +145,14 @@
                 text-transform: uppercase;
                 color: #546e7a;
                 margin-top: 10px;
+              }
+
+              &:hover {
+                transform: scale(1.3);
+
+                a {
+                  text-decoration: none;
+                }
               }
             }
           }
@@ -181,7 +188,6 @@
         color: #263238;
       }
     }
-
   }
 }
 
