--- a/app/views/categories/_category.html.erb
+++ b/app/views/categories/_category.html.erb
@@ -1,1 +1,1 @@
-<span class="item-category"><%= link_to  category.name, category_path(category) %> &nbsp;</span>
+<span class="item-category"><%= link_to  category.name, category_path(category) %></span>
