--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -135,21 +135,20 @@
           .article-category {
             margin: 10px 0;
 
-            span {
+            .item-category {
               background: whitesmoke;
               padding: 6px 8px;
-              margin: 0 0.5rem 0 0;
+              margin: 0 3px 0 0;
 
               a {
                 font-size: 12px;
                 text-transform: uppercase;
+                letter-spacing: -1px;
                 color: #546e7a;
                 margin-top: 10px;
               }
 
               &:hover {
-                transform: scale(1.3);
-
                 a {
                   text-decoration: none;
                 }
