--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -85,7 +85,7 @@
       grid-gap: 30px;
       justify-content: center;
 
-      .article_wrapper {
+      .article__wrapper {
         .article {
           background: #ffffff;
           box-shadow: 0px 10px 50px 0px rgba(84, 110, 122, 0.15);
