--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -1,5 +1,5 @@
 <% obj.each do |article| %>
-    <div class="article_wrapper">
+    <div class="article__wrapper">
       <div class="article">
         <h4 class="article-title"><%= article.title %></h4>
         <div class="seperator"></div>
