--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,3 +1,9 @@
-<h1 align="center">Create an article</h1>
-
-<%= render 'form' %>
+<div id="main-new-article">
+  <div class="container-wrapper">
+    <div class="new-article__heading">
+      <h2 align="center">Create Article</h2>
+      <div class="seperator"></div>
+    </div>
+    <%= render 'form' %>
+  </div>
+</div>
