--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,3 +1,10 @@
-<h1 align="center">Edit existing article</h1>
+<div id="main-edit-article">
+  <div class="container-wrapper">
+    <div class="edit-article__heading">
+      <h2 align="center">Update Article</h2>
+      <div class="seperator"></div>
+    </div>
+    <%= render 'form' %>
+  </div>
+</div>
 
-<%= render 'form' %>
