--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -74,7 +74,7 @@
 
   .dashboard-tab {
     grid-row: 4/5;
-    margin: 40px 160px auto;
+    margin: 40px 160px;
     display: flex;
     flex: 1;
     justify-content: center;
@@ -87,6 +87,7 @@
 
       .article__wrapper {
         .article {
+          min-height: 100%;
           background: #ffffff;
           box-shadow: 0px 10px 50px 0px rgba(84, 110, 122, 0.15);
           padding: 24px;
@@ -134,6 +135,7 @@
 
           .article-category {
             margin: 10px 0;
+            height: 18px;
 
             .item-category {
               background: whitesmoke;
