--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -24,12 +24,12 @@
           text-transform: capitalize;
           font-weight: bold;
           font-size: 32px;
-          color: #000000;
+          color: #263238;
         }
 
         p {
           font-size: 14px;
-          color: #000000;
+          color: #263238;
         }
 
         .profile-info__action {
@@ -79,101 +79,105 @@
     flex: 1;
     justify-content: center;
 
-    .main-posts {
-      display: grid;
-      grid-template-columns: repeat(2, 45%);
-      grid-gap: 30px;
-      justify-content: center;
+    .main-posts__wrapper {
+      flex: 1;
 
-      .article__wrapper {
-        .article {
-          min-height: 100%;
-          background: #ffffff;
-          box-shadow: 0px 10px 50px 0px rgba(84, 110, 122, 0.15);
-          padding: 24px;
-          border: 1px solid #eaeaea;
-          border-radius: 4px;
+      .main-posts {
+        display: grid;
+        grid-template-columns: repeat(2, 45%);
+        grid-gap: 30px;
+        justify-content: center;
 
-          .article-title {
-            text-transform: uppercase;
-            font-weight: bold;
-            font-size: 1.5em;
-            color: #263238;
-          }
+        .article__wrapper {
+          .article {
+            min-height: 100%;
+            background: #ffffff;
+            box-shadow: 0px 10px 50px 0px rgba(84, 110, 122, 0.15);
+            padding: 24px;
+            border: 1px solid #eaeaea;
+            border-radius: 4px;
 
-          .seperator {
-            background: #263238;
-            width: 100px;
-            height: 2px;
-            margin: 0 0 1rem;
-            border: none;
-          }
-
-          .article-meta-details {
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-
-            small {
-              font-size: 12px;
-            }
-
-            .article-username {
-              text-transform: capitalize;
-            }
-          }
-
-          .article-body {
-            min-height: 50px;
-
-            p {
-              font-family: "Montserrat", sans-serif;
+            .article-title {
+              text-transform: uppercase;
+              font-weight: bold;
+              font-size: 1.5em;
               color: #263238;
-              margin: 16px 0;
             }
-          }
 
-          .article-category {
-            margin: 10px 0;
-            height: 18px;
+            .seperator {
+              background: #263238;
+              width: 100px;
+              height: 2px;
+              margin: 0 0 1rem;
+              border: none;
+            }
 
-            .item-category {
-              background: whitesmoke;
-              padding: 6px 8px;
-              margin: 0 3px 0 0;
+            .article-meta-details {
+              display: flex;
+              flex-direction: row;
+              justify-content: space-between;
 
-              a {
+              small {
                 font-size: 12px;
-                text-transform: uppercase;
-                letter-spacing: -1px;
-                color: #546e7a;
-                margin-top: 10px;
               }
 
-              &:hover {
+              .article-username {
+                text-transform: capitalize;
+              }
+            }
+
+            .article-body {
+              min-height: 50px;
+
+              p {
+                font-family: "Montserrat", sans-serif;
+                color: #263238;
+                margin: 16px 0;
+              }
+            }
+
+            .article-category {
+              margin: 10px 0;
+              height: 18px;
+
+              .item-category {
+                background: whitesmoke;
+                padding: 6px 8px;
+                margin: 0 3px 0 0;
+
                 a {
-                  text-decoration: none;
+                  font-size: 12px;
+                  text-transform: uppercase;
+                  letter-spacing: -1px;
+                  color: #546e7a;
+                  margin-top: 10px;
+                }
+
+                &:hover {
+                  a {
+                    text-decoration: none;
+                  }
                 }
               }
             }
-          }
 
-          .article-actions {
-            display: flex;
-            justify-content: space-between;
-            margin: 0 3px;
+            .article-actions {
+              display: flex;
+              justify-content: space-between;
+              margin: 0 3px;
 
-            span {
-              a {
-                font-size: 12px;
-                text-transform: uppercase;
-                color: #263238;
+              span {
+                a {
+                  font-size: 12px;
+                  text-transform: uppercase;
+                  color: #263238;
+                }
               }
             }
-          }
 
-          .description {
-            margin-top: 0;
+            .description {
+              margin-top: 0;
+            }
           }
         }
       }
