--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,16 +1,27 @@
-<h1 align="center">Categories</h1>
-<div align="center">
-  <% @categories.each do |category| %>
-    <ul class="listing">
-      <div class="row">
-        <div class="well col-md-4 col-md-offset-4">
-          <li class="article-title">
-            <%= link_to  "#{category.name.capitalize}", category_path(category) %>
-          </li>
-          <li><small><%= pluralize(category.articles.count, "article") %></small></li>
+<div id="main-category-listing">
+  <div class="container-wrapper">
+    <div class="category-listing__heading">
+      <h2>Featured Categories</h2>
+      <div class="seperator"></div>
+      
+    </div>
+    <% if logged_in? and current_user.admin? %>
+        <div class="new-category"><%= link_to "Create", new_category_path %></div>
+      <% end %>
+    <div class="category__listing">
+      <% @categories.each do |category| %>
+        <div class="category-wrapper">
+          <%= link_to category_path(category), class: "no-decoration" do %>
+            <div class="category-content">
+              <h4><%= category.name.capitalize %></h4>
+              <span class="category-articles"><%= pluralize(category.articles.count, "article") %></span>
+            </div>
+          <% end %>
         </div>
-      </div>
-    </ul>
-  <% end %>
-  <%= will_paginate %>
+      <% end %>
+    </div>
+  </div>
+  <div  align="center">
+    <%= will_paginate %>
+  </div>
 </div>
