--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -21,7 +21,6 @@
 
       .profile-info__content {
         h2 {
-          text-transform: capitalize;
           font-weight: bold;
           font-size: 32px;
           color: #263238;
@@ -37,11 +36,12 @@
           border-radius: 5px;
           padding: 0.6rem 1rem;
           cursor: pointer;
+          text-decoration: none;
           outline: none;
           color: #ff7a00;
+          margin-right: 8px;
 
           &:hover {
-            text-decoration: none;
             background-color: #ff7a00;
             color: #ffffff;
           }
