--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -20,6 +20,7 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
           <% if current_page?(root_path)%>
+            <li><%= link_to 'Bloggers', users_path %></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Categories<span class="caret"></span></a>
               <ul class="dropdown-menu">
@@ -49,7 +50,7 @@
               </a>
               <ul class="dropdown-menu">
                 <li><%= link_to 'Home', articles_path %></li>
-                <li><%= link_to 'Authors', users_path %></li>
+                <li><%= link_to 'Bloggers', users_path %></li>
                 <li><%= link_to "Categories", categories_path %></li>
                 <li><%= link_to "Write a post", new_article_path %></li>
                 <li><%= link_to "My Profile", user_path(current_user) %></li>
